Fix X and checkmark indicators on mobile - adjust zone-indicator container size

--- a/styles.css
+++ b/styles.css
@@ -647,6 +647,11 @@ body::before {
         height: 42px;
     }
 
+    .zone-indicator {
+        width: 50px;
+        height: 50px;
+    }
+
     .settings-panel {
         width: 100vw;
         padding: 0.75rem 1rem;
@@ -728,8 +733,13 @@ body::before {
     }
 
     .indicator-icon {
-        width: 35px;
-        height: 35px;
+        width: 32px;
+        height: 32px;
+    }
+
+    .zone-indicator {
+        width: 40px;
+        height: 40px;
     }
 
     .settings-panel {
